--- a/src/tutorial/00.md
+++ b/src/tutorial/00.md
@@ -1,7 +1,9 @@
-Welcome!
-========
+---
+out: index.html
+---
 
-This Getting Started Guide will get you started with sbt.
+Getting Started with sbt
+========================
 
 sbt uses a small number of concepts to support flexible and powerful
 build definitions. There are not that many concepts, but sbt is not
@@ -21,12 +23,4 @@ it's a good idea to skip the other pages in the guide.
 It's best to read in order, as later pages in the Getting Started Guide
 build on concepts introduced earlier.
 
-The guide begins with Setup \<Setup\>.
-
 Thanks for trying out sbt and *have fun*!
-
-Translations to other languages
--------------------------------
-
--   [Japanese](http://scalajp.github.com/sbt-getting-started-guide-ja/)
-
