ironing out markdown ports

--- a/src/tutorial/00.md
+++ b/src/tutorial/00.md
@@ -2,6 +2,10 @@
 out: index.html
 ---
 
+  [Basic-Def]: Basic-Def.html
+  [Scopes]: Scopes.html
+  [More-About-Settings]: More-About-Settings.html
+
 Getting Started with sbt
 ========================
 
@@ -16,8 +20,8 @@ and maintain an sbt build definition.
 It is *highly recommended* to read the Getting Started Guide!
 
 If you are in a huge hurry, the most important conceptual background can
-be found in .sbt build definition \<Basic-Def\>, scopes \<Scopes\>, and
-more about settings \<More-About-Settings\>. But we don't promise that
+be found in [.sbt build definition][Basic-Def], [scopes][Scopes], and
+[more kinds of setting][More-About-Settings]. But we don't promise that
 it's a good idea to skip the other pages in the guide.
 
 It's best to read in order, as later pages in the Getting Started Guide
