ported Spanish translation to Pamflet

--- a/src/tutorial/es/00.md
+++ b/src/tutorial/es/00.md
@@ -1,7 +1,13 @@
-Bienvenido(a)!
-==============
+---
+out: index.html
+---
 
-Esta Guía de inicio le ayudará a empezar con sbt.
+  [Basic-Def]: Basic-Def.html
+  [Scopes]: Scopes.html
+  [More-About-Settings]: More-About-Settings.html
+
+Guía de Inicio de sbt 
+=====================
 
 sbt usa un número pequeño de conceptos para soportar *build definitions*
 (definiciones de construcción de software) flexibles y poderosas. No hay
@@ -15,20 +21,11 @@ mantnere una *build definition*.
 ¡Es *altamente recomendable* leer la Guía de inicio!
 
 Si usted tiene mucha prisa, los conceptos más importantes pueden
-encontrarse en `sbt build definition <Basic-Def>`, `scopes <Scopes>`, y
-`más sobre settings <More-About-Settings>`. Pero no prometemos que sea
+encontrarse en [sbt build definition][Basic-Def], [scopes][Scopes], y
+[más sobre settings][More-About-Settings]. Pero no prometemos que sea
 una buena idea dejar de leer las otras páginas de la guía.
 
 Es mejor leer en orden, ya que las páginas posteriores de la Guía de
 inicio utilizan conceptos introducidos con anterioridad.
 
-La Guía inicia con `Configuración <Setup>`.
-
 Gracias por utilizar sbt *¡Diviértase!*
-
-Traducciones a otros lenguajes
-------------------------------
-
--   `Japonés <http://scalajp.github.com/sbt-getting-started-guide-ja/>`\_
--   Inglés
-
