--- a/src/tutorial/es/01-Setup/00.md
+++ b/src/tutorial/es/01-Setup/00.md
@@ -12,24 +12,27 @@ out: Setup.html
   [Linux]: Installing-sbt-on-Linux.html
   [Manual-Installation]: Manual-Installation.html
 
-Installing sbt
+Instalando sbt
 --------------
 
-To create an sbt project, you'll need to take these steps:
+Para crear un proyecto de sbt, necesitará dar los siguientes pasos:
 
--   Install sbt and create a script to launch it.
--   Setup a simple [hello world][Hello] project
-    -   Create a project directory with source files in it.
-    -   Create your build definition.
--   Move on to [running][Running] to learn how to run sbt.
--   Then move on to [.sbt build definition][Basic-Def] to learn more
-    about build definitions.
+- Instalar sbt y crear un script para iniciarlo.
+- Configurar un proyecto simple [hola mundo][Hello].
+  - Crear un directorio llamado project con archivos de código fuente en él.
+  - Crear su *build definition* (definición de construcción del proyecto).
+- Continuar con [ejecución][Running] para aprender a ejecutar sbt.
+- Enseguida continuar con [.sbt build definition][Basic-Def] para
+  aprender más sobre las *build definitions*.
+
+<!-- TODO: Translate to Spanish. -->
 
 Ultimately, the installation of sbt boils down to a launcher JAR and a shell script,
 but depending on your platform, we provide several ways to make the process less tedious.
 Head over to the installation steps for [Mac][Mac], [Windows][Windows], [Linux][Linux], or [manual installation][Manual-Installation].
 
-### Tips and Notes
+### Tips y notas
 
-If you have any trouble running sbt, see [Setup Notes][Setup-Notes] on
-terminal encodings, HTTP proxies, and JVM options.
+Si tiene algún problema ejecutando sbt, vea
+[Setup Notes][Setup-Notes] en las codificaciones de la terminal,
+HTTP proxies, y opciones de la JVM.
