--- a/src/reference/01-General-Info/06-Changes/00.md
+++ b/src/reference/01-General-Info/06-Changes/00.md
@@ -19,7 +19,7 @@ Changes
     output. Especially useful for aggregate modules. `test-only` et al
     unaffected. (gh-1185)
 -   sbt now uses minor-patch version of ivy 2.4
-    (org.scala-sbt.ivy:ivy:2.4.0-sbt-\<git sha\>)
+    (org.scala-sbt.ivy:ivy:2.4.0-sbt-<git sha>)
 -   `sbt.Plugin` deprecated in favor of `sbt.AutoPlugin`
 -   name-hashing incremental compiler now supports scala macros.
 -   `testResultLogger` is now configured.
@@ -89,7 +89,7 @@ Changes
     other commands on startup and doesn't force sbt into batch mode.
 -   Deprecate internal -, --, and --- commands in favor of `onFailure`,
     `sbtClearOnFailure`, and `resumeFromFailure`.
--   `makePom` no longer generates \<type\> elements for standard
+-   `makePom` no longer generates `<type>` elements for standard
     classifiers. (gh-728)
 -   Fix many instances of the Turkish i bug.
 -   Read https+ftp proxy environment variables into system properties
@@ -115,7 +115,7 @@ Changes
 -   Docs: link to page source now at the bottom of the page
 -   Docs: sitemap now automatically generated
 -   Docs: custom
-    `role enables links from a key name in the docs to the val in`sxr/sbt/Keys.scala\`\`
+    `role enables links from a key name in the docs to the val in`sxr/sbt/Keys.scala`
 -   Docs: restore sxr support and fix links to sxr'd sources. (gh-863)
 
 ### 0.12.4 to 0.13.0
