--- a/src/reference/02-Faq/00.md
+++ b/src/reference/02-Faq/00.md
@@ -34,8 +34,7 @@ something is a bug. See `getting-help`.
     clear and reproducible.
 -   Answer questions on `Stack Overflow`\_.
 -   Discuss development on the `sbt-dev mailing list`\_.
--   Fix issues that affect you. \`Fork, fix, and submit a pull
-    request \<http://help.github.com/fork-a-repo/\>\_.
+-   Fix issues that affect you. [Fork, fix, and submit a pull request](http://help.github.com/fork-a-repo/).
 -   Implement features that are important to you. There is an
     /Community/Opportunities page for some ideas, but the most useful
     contributions are usually ones you want yourself.
