--- a/src/reference/02-Faq/00.md
+++ b/src/reference/02-Faq/00.md
@@ -43,7 +43,7 @@ something is a bug. See `getting-help`.
 
 #### My last command didn't work but I can't see an explanation. Why?
 
-sbt |version| by default suppresses most stack traces and debugging
+sbt $app_version$ by default suppresses most stack traces and debugging
 information. It has the nice side effect of giving you less noise on
 screen, but as a newcomer it can leave you lost for explanation. To see
 the previous output of a command at a higher verbosity, type
@@ -516,7 +516,7 @@ first and then the following questions.
 
 #### Where has 0.7's `lib_managed` gone?
 
-By default, sbt |version| loads managed libraries from your ivy cache
+By default, sbt $app_version$ loads managed libraries from your ivy cache
 without copying them to a `lib_managed` directory. This fixes some bugs
 with the previous solution and keeps your project directory small. If
 you want to insulate your builds from the ivy cache being cleared, set
@@ -525,14 +525,14 @@ you want to insulate your builds from the ivy cache being cleared, set
 `lib_managed` in 0.7.x).
 
 This does mean that existing solutions for sharing libraries with your
-favoured IDE may not work. There are |version| plugins for IDEs being
+favoured IDE may not work. There are $app_version$ plugins for IDEs being
 developed:
 
 -   IntelliJ IDEA: `<https://github.com/mpeltonen/sbt-idea>`\_
 -   Netbeans: `<https://github.com/remeniuk/sbt-netbeans-plugin>`\_
 -   Eclipse: `<https://github.com/typesafehub/sbteclipse>`\_
 
-#### What are the commands I can use in |version| vs. 0.7?
+#### What are the commands I can use in $app_version$ vs. 0.7?
 
 For a list of commands, run `help`. For details on a specific command,
 run `help <command>`. To view a list of tasks defined on the current
@@ -569,7 +569,7 @@ classpaths.
 ### My tests all run really fast but some are broken that weren't in 0.7!
 
 Be aware that compilation and tests run in parallel by default in sbt
-|version|. If your test code isn't thread-safe then you may want to
+$app_version$. If your test code isn't thread-safe then you may want to
 change this behaviour by adding one of the following to your
 `build.sbt`:
 
@@ -589,9 +589,9 @@ project.
 For an early version of an xsbt Web Start plugin, visit the
 `xsbt-webstart <https://github.com/ritschwumm/xsbt-webstart>`\_ project.
 
-#### How are inter-project dependencies different in |version| vs. 0.7?
+#### How are inter-project dependencies different in $app_version$ vs. 0.7?
 
-In |version|, there are three types of project dependencies (classpath,
+In $app_version$, there are three types of project dependencies (classpath,
 execution, and configuration) and they are independently defined. These
 were combined in a single dependency type in 0.7.x. A declaration like:
 
@@ -608,19 +608,19 @@ meant that the `B` project had a classpath and execution dependency on
 3.  Configuration: For some settings, if they were not overridden in A,
     they would default to the value provided in B.
 
-In |version|, declare the specific type of dependency you want. Read
+In $app_version$, declare the specific type of dependency you want. Read
 about `multi-project builds </Getting-Started/Multi-Project>` in the
 Getting Started Guide for details.
 
 #### Where did class/object X go since 0.7?
 
-  0.7                                                                                                                                                                                              |version|
+  0.7                                                                                                                                                                                              $app_version$
   ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ ---------------------------------------------------------------------------------------------------------------------
   | `FileUtilities <http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/FileUtilities\$object.html>`\_                                                                             `IO <../api/sbt/IO\$.html>`\_
   `Path class <http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path.html>`\_ and `object <http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path\$.html>`   \_ `Path object <../api/sbt/Path\$.html>`\_, `File`, `RichFile <../api/sbt/RichFile.html>`\_
   `PathFinder class <http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/PathFinder.html>`\_                                                                                      `Seq[File]`, `PathFinder class <../api/sbt/PathFinder.html>`\_, `PathFinder object <../api/sbt/PathFinder\$.html>`\_
 
-#### Where can I find plugins for |version|?
+#### Where can I find plugins for $app_version$?
 
 See `/Community/Community-Plugins` for a list of currently available
 plugins.
