--- a/src/reference/02-Faq/00.md
+++ b/src/reference/02-Faq/00.md
@@ -23,14 +23,14 @@ development.
 
 #### How do I report a bug?
 
-Please use the `issue tracker <https://github.com/sbt/sbt/issues>`\_ to
+Please use the [issue tracker](https://github.com/sbt/sbt/issues) to
 report confirmed bugs. Do not use it to ask questions or to determine if
 something is a bug. See `getting-help`.
 
 #### How can I help?
 
 -   Fix mistakes that you notice on the wiki.
--   Make `bug reports <https://github.com/sbt/sbt/issues>`\_ that are
+-   Make [bug reports](https://github.com/sbt/sbt/issues) that are
     clear and reproducible.
 -   Answer questions on `Stack Overflow`\_.
 -   Discuss development on the `sbt-dev mailing list`\_.
@@ -214,7 +214,7 @@ See the `Additional test configurations` section of
 #### How can I create a custom run task, in addition to `run`?
 
 This answer is extracted from a
-`mailing list discussion <http://groups.google.com/group/simple-build-tool/browse_thread/thread/4c28ee5b7e18b46a/>`\_.
+[mailing list discussion](http://groups.google.com/group/simple-build-tool/browse_thread/thread/4c28ee5b7e18b46a/).
 
 Read the Getting Started Guide up to
 `custom settings </Getting-Started/Custom-Settings>` for background.
@@ -438,7 +438,7 @@ as a jar or pom.xml. An example of such an error is:
 
 The invalid checksum should generally be reported to the repository
 owner (as
-`was done <https://issues.sonatype.org/browse/MVNCENTRAL-46>`\_ for the
+[was done](https://issues.sonatype.org/browse/MVNCENTRAL-46) for the
 above error). In the meantime, you can temporarily disable checking with
 the following setting:
 
@@ -494,7 +494,7 @@ The key is to initialize the Settings for the interpreter using
 Here, MyType is a representative class that should be included on the
 interpreter's classpath and in its application class loader. For more
 background, see the
-`original proposal <https://gist.github.com/404272>`\_ that resulted in
+[original proposal](https://gist.github.com/404272) that resulted in
 *embeddedDefaults* being added.
 
 Similarly, use a representative class as the type argument when using
@@ -583,11 +583,11 @@ change this behaviour by adding one of the following to your
 #### What happened to the web development and Web Start support since 0.7?
 
 Web application support was split out into a plugin. See the
-`xsbt-web-plugin <https://github.com/JamesEarlDouglas/xsbt-web-plugin>`\_
+[xsbt-web-plugin](https://github.com/JamesEarlDouglas/xsbt-web-plugin)
 project.
 
 For an early version of an xsbt Web Start plugin, visit the
-`xsbt-webstart <https://github.com/ritschwumm/xsbt-webstart>`\_ project.
+[xsbt-webstart](https://github.com/ritschwumm/xsbt-webstart) project.
 
 #### How are inter-project dependencies different in $app_version$ vs. 0.7?
 
@@ -616,9 +616,9 @@ Getting Started Guide for details.
 
   0.7                                                                                                                                                                                              $app_version$
   ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ ---------------------------------------------------------------------------------------------------------------------
-  | `FileUtilities <http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/FileUtilities\$object.html>`\_                                                                             `IO <../api/sbt/IO\$.html>`\_
-  `Path class <http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path.html>`\_ and `object <http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path\$.html>`   \_ `Path object <../api/sbt/Path\$.html>`\_, `File`, `RichFile <../api/sbt/RichFile.html>`\_
-  `PathFinder class <http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/PathFinder.html>`\_                                                                                      `Seq[File]`, `PathFinder class <../api/sbt/PathFinder.html>`\_, `PathFinder object <../api/sbt/PathFinder\$.html>`\_
+  | [FileUtilities](http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/FileUtilities\$object.html)                                                                             `IO <../api/sbt/IO\$.html>`\_
+  [Path class](http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path.html) and [object](http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path\$.html)   \_ `Path object <../api/sbt/Path\$.html>`\_, `File`, `RichFile <../api/sbt/RichFile.html>`\_
+  [PathFinder class](http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/PathFinder.html)                                                                                      `Seq[File]`, `PathFinder class <../api/sbt/PathFinder.html>`\_, `PathFinder object <../api/sbt/PathFinder\$.html>`\_
 
 #### Where can I find plugins for $app_version$?
 
