--- a/src/reference/02-Faq/00.md
+++ b/src/reference/02-Faq/00.md
@@ -136,7 +136,7 @@ or when the outputs haven't been generated yet. This support is
 primitive and subject to change.
 
 The relevant methods are two overloaded methods called
-`FileFunction.cached <../api/sbt/FileFunction\$.html>`\_. Each requires a
+[FileFunction.cached](../api/sbt/FileFunction\$.html). Each requires a
 directory in which to store cached data. Sample usage is:
 
 ```scala
@@ -160,10 +160,10 @@ the input tracking style is `FilesInfo.lastModified`, based on a file's
 last modified time, and the output tracking style is `FilesInfo.exists`,
 based only on whether the file exists. The other available style is
 `FilesInfo.hash`, which tracks a file based on a hash of its contents.
-See the `FilesInfo API <../api/sbt/FilesInfo\$.html>`\_ for details.
+See the [FilesInfo API](../api/sbt/FilesInfo\$.html) for details.
 
 A more advanced version of `FileFunction.cached` passes a data structure
-of type `ChangeReport <../api/sbt/ChangeReport.html>`\_ describing the
+of type [ChangeReport](../api/sbt/ChangeReport.html) describing the
 changes to input and output files since the last evaluation. This
 version of `cached` also expects the set of files generated as output to
 be the result of the evaluated function.
@@ -299,8 +299,8 @@ task would look like:
 
 It is possible to register additional jars that will be placed on sbt's
 classpath (since version 0.10.1). Through
-`State <../api/sbt/State\$.html>`\_, it is possible to obtain a
-`xsbti.ComponentProvider <../api/xsbti/ComponentProvider.html>`\_, which
+[State](../api/sbt/State\$.html), it is possible to obtain a
+[xsbti.ComponentProvider](../api/xsbti/ComponentProvider.html), which
 manages application components. Components are groups of files in the
 `~/.sbt/boot/` directory and, in this case, the application is sbt. In
 addition to the base classpath, components in the "extra" component are
@@ -616,9 +616,9 @@ Getting Started Guide for details.
 
   0.7                                                                                                                                                                                              $app_version$
   ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ ---------------------------------------------------------------------------------------------------------------------
-  | [FileUtilities](http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/FileUtilities\$object.html)                                                                             `IO <../api/sbt/IO\$.html>`\_
-  [Path class](http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path.html) and [object](http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path\$.html)   \_ `Path object <../api/sbt/Path\$.html>`\_, `File`, `RichFile <../api/sbt/RichFile.html>`\_
-  [PathFinder class](http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/PathFinder.html)                                                                                      `Seq[File]`, `PathFinder class <../api/sbt/PathFinder.html>`\_, `PathFinder object <../api/sbt/PathFinder\$.html>`\_
+  | [FileUtilities](http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/FileUtilities\$object.html)                                                                             [IO](../api/sbt/IO\$.html)
+  [Path class](http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path.html) and [object](http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path\$.html)   \_ [Path object](../api/sbt/Path\$.html), `File`, [RichFile](../api/sbt/RichFile.html)
+  [PathFinder class](http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/PathFinder.html)                                                                                      `Seq[File]`, [PathFinder class](../api/sbt/PathFinder.html), [PathFinder object](../api/sbt/PathFinder\$.html)
 
 #### Where can I find plugins for $app_version$?
 
