--- a/src/reference/04-Detailed-Topics/00.md
+++ b/src/reference/04-Detailed-Topics/00.md
@@ -12,4 +12,4 @@ a foundation.
 
 Other resources include the `Examples </Examples/index>` and
 `extending sbt </Extending/index>` areas on the wiki, and the
-`API Documentation <../../api/index.html>`\_
+[API Documentation](../../api/index.html)
