--- a/src/reference/02-Faq/00.md
+++ b/src/reference/02-Faq/00.md
@@ -9,8 +9,8 @@ Frequently Asked Questions
 
 #### How do I get help?
 
-Please use `Stack Overflow`\_ for questions. Use the
-`sbt-dev mailing list`\_ for comments and discussions about sbt
+Please use [Stack Overflow](http://stackoverflow.com/tags/sbt) for questions. Use the
+[sbt-dev mailing list](https://groups.google.com/d/forum/sbt-dev) for comments and discussions about sbt
 development.
 
 -   Please state the problem or question clearly and provide enough
@@ -32,8 +32,8 @@ something is a bug. See `getting-help`.
 -   Fix mistakes that you notice on the wiki.
 -   Make [bug reports](https://github.com/sbt/sbt/issues) that are
     clear and reproducible.
--   Answer questions on `Stack Overflow`\_.
--   Discuss development on the `sbt-dev mailing list`\_.
+-   Answer questions on [Stack Overflow](http://stackoverflow.com/tags/sbt).
+-   Discuss development on the [sbt-dev mailing list](https://groups.google.com/d/forum/sbt-dev).
 -   Fix issues that affect you. [Fork, fix, and submit a pull request](http://help.github.com/fork-a-repo/).
 -   Implement features that are important to you. There is an
     /Community/Opportunities page for some ideas, but the most useful
@@ -96,8 +96,8 @@ dependencies. Read the Getting Started Guide about
 To figure out an unknown type or method, have a look at the
 `Getting Started Guide </Getting-Started/Welcome>` if you have not. Also
 try the `index </Name-Index>` of commonly used methods, values, and
-types, the `API Documentation <../api/>`\_ and the
-`hyperlinked sources <../sxr/>`\_.
+types, the [API Documentation](../api/) and the
+[hyperlinked sources](../sxr/).
 
 #### How do I add files to a jar package?
 
@@ -528,9 +528,9 @@ This does mean that existing solutions for sharing libraries with your
 favoured IDE may not work. There are $app_version$ plugins for IDEs being
 developed:
 
--   IntelliJ IDEA: `<https://github.com/mpeltonen/sbt-idea>`\_
--   Netbeans: `<https://github.com/remeniuk/sbt-netbeans-plugin>`\_
--   Eclipse: `<https://github.com/typesafehub/sbteclipse>`\_
+- [IntelliJ IDEA](https://github.com/mpeltonen/sbt-idea)
+- [Netbeans](https://github.com/remeniuk/sbt-netbeans-plugin)
+- [Eclipse](https://github.com/typesafehub/sbteclipse)
 
 #### What are the commands I can use in $app_version$ vs. 0.7?
 
@@ -614,11 +614,36 @@ Getting Started Guide for details.
 
 #### Where did class/object X go since 0.7?
 
-  0.7                                                                                                                                                                                              $app_version$
-  ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ ---------------------------------------------------------------------------------------------------------------------
-  | [FileUtilities](http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/FileUtilities\$object.html)                                                                             [IO](../api/sbt/IO\$.html)
-  [Path class](http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path.html) and [object](http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path\$.html)   \_ [Path object](../api/sbt/Path\$.html), `File`, [RichFile](../api/sbt/RichFile.html)
-  [PathFinder class](http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/PathFinder.html)                                                                                      `Seq[File]`, [PathFinder class](../api/sbt/PathFinder.html), [PathFinder object](../api/sbt/PathFinder\$.html)
+<table>
+  <tr>
+    <th>0.7</th>
+    <th>$app_version$</th>
+  </tr>
+
+  <tr>
+    <td><a href="http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/FileUtilities\$object.html">FileUtilities</a></td>
+    <td><a href="../api/sbt/IO\$.html)">IO</a></td>
+  </tr>
+
+  <tr>
+    <td><a href="http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path.html">Path class</a> and
+    <a href="http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path\$.html">object</a></td>
+    <td>
+      <a href="../api/sbt/Path\$.html">Path object</a>, <tt>File</tt>,
+      <a href="../api/sbt/RichFile.html">RichFile</a>
+
+    </td>
+  </tr>
+
+  <tr>
+    <td><a href="http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/PathFinder.html">PathFinder class</a></td>
+    <td>
+      <tt>Seq[File]</tt>, 
+      <a href="../api/sbt/PathFinder.html)">PathFinder class</a>,
+      <a href="../api/sbt/PathFinder\$.html">PathFinder object</a>
+    </td>
+  </tr>
+</table>
 
 #### Where can I find plugins for $app_version$?
 
