fixed links to Getting Started guide

--- a/src/reference/00.md
+++ b/src/reference/00.md
@@ -3,14 +3,15 @@ out: index.html
 ---
 
   [Getting-Started]: ../tutorial/index.html
-  [Name-Index]: Name-Index.html
+  [Setup]: ../tutorial/Setup.html
   [Basic-Def]: ../tutorial/Basic-Def.html
+  [Library-Dependencies]: ../tutorial/Library-Dependencies.html
+  [Multi-Project]: ../tutorial/Multi-Project.html  
+  [Name-Index]: Name-Index.html
   [Triggered-Execution]: Triggered-Execution.html
   [Java-Sources]: Java-Sources.html
   [Testing]: Testing.html
-  [Multi-Project]: ../tutorial/Multi-Project.html
   [Parallel-Execution]: Parallel-Execution.html
-  [Library-Dependencies]: ../tutorial/Library-Dependencies.html
 
 sbt Reference Manual
 ====================
@@ -21,7 +22,7 @@ later.
 
 ### Install
 
-See [Installing sbt](../tutorial/Setup.html) for the setup instructions.
+See [Installing sbt][Setup] for the setup instructions.
 
 ### Getting Started
 
