--- a/src/reference/03-Howto/20-Examples/00.md
+++ b/src/reference/03-Howto/20-Examples/00.md
@@ -2,6 +2,8 @@
 out: Examples.html
 ---
 
+  [Getting-Started]: ../tutorial/index.html
+
 Examples
 --------
 
@@ -9,5 +11,5 @@ This section of the documentation has example sbt build definitions and
 code. Contributions are welcome!
 
 You may want to read the
-`Getting Started Guide </Getting-Started/Welcome>` as a foundation for
+[Getting Started Guide][Getting-Started] as a foundation for
 understanding the examples.
