--- a/src/reference/02-Faq/00.md
+++ b/src/reference/02-Faq/00.md
@@ -2,6 +2,15 @@
 out: Faq.html
 ---
 
+  [Basic-Def]: ../tutorial/Basic-Def.html
+  [More-About-Settings]: ../tutorial/More-About-Settings.html
+  [Running]: ../tutorial/Running.html
+  [Scopes]: ../tutorial/Scopes.html
+  [Library-Dependencies]: ../tutorial/Library-Dependencies.html
+  [Custom-Settings]: ../tutorial/Custom-Settings.html
+  [Multi-Project]: ../tutorial/Multi-Project.html
+  [Name-Index]: Name-Index.html
+
 Frequently Asked Questions
 --------------------------
 
@@ -81,21 +90,21 @@ You may run `sbt console`.
 
 These are methods on keys used to construct a `Setting` or a `Task`. The
 Getting Started Guide covers all these methods, see
-`.sbt build definition </Getting-Started/Basic-Def>` and
-`more about settings </Getting-Started/More-About-Settings>` for
+[.sbt build definition][Basic-Def] and
+[more kinds of setting][More-About-Settings] for
 example.
 
 #### What is the `%` method?
 
 It's used to create a `ModuleID` from strings, when specifying managed
 dependencies. Read the Getting Started Guide about
-`library dependencies </Getting-Started/Library-Dependencies>`.
+[library dependencies][Library-Dependencies].
 
 #### What is `ModuleID`, `Project`, ...?
 
 To figure out an unknown type or method, have a look at the
-`Getting Started Guide </Getting-Started/Welcome>` if you have not. Also
-try the `index </Name-Index>` of commonly used methods, values, and
+[Getting Started Guide][Getting-Started] if you have not. Also
+try the [index][Name-Index] of commonly used methods, values, and
 types, the [API Documentation](../api/) and the
 [hyperlinked sources](../sxr/).
 
@@ -217,15 +226,17 @@ This answer is extracted from a
 [mailing list discussion](http://groups.google.com/group/simple-build-tool/browse_thread/thread/4c28ee5b7e18b46a/).
 
 Read the Getting Started Guide up to
-`custom settings </Getting-Started/Custom-Settings>` for background.
+[custom settings][Custom-Settings] for background.
 
 A basic run task is created by:
 
-    lazy val myRunTask = taskKey[Unit]("A custom run task.")
+```scala
+lazy val myRunTask = taskKey[Unit]("A custom run task.")
 
-    // this can go either in a `build.sbt` or the settings member
-    //   of a Project in a full configuration
-    fullRunTask(myRunTask, Test, "foo.Foo", "arg1", "arg2")
+// this can go either in a `build.sbt` or the settings member
+//   of a Project in a full configuration
+fullRunTask(myRunTask, Test, "foo.Foo", "arg1", "arg2")
+```
 
 If you want to be able to supply arguments on the command line, replace
 `TaskKey` with `InputKey` and `fullRunTask` with `fullRunInputTask`. The
@@ -410,7 +421,7 @@ To correct this, include the IvyModule plugin settings, which includes
     }
 
 A more subtle variation of this error occurs when using
-`scoped settings </Getting-Started/Scopes>`.
+[scoped settings][Scopes].
 
     // error: Reference to uninitialized setting
     settings = Seq(
@@ -537,7 +548,7 @@ developed:
 For a list of commands, run `help`. For details on a specific command,
 run `help <command>`. To view a list of tasks defined on the current
 project, run `tasks`. Alternatively, see the
-`Running </Getting-Started/Running>` page in the Getting Started Guide
+[Running][Running] page in the Getting Started Guide
 for descriptions of common commands and tasks.
 
 If in doubt start by just trying the old command as it may just work.
@@ -595,8 +606,10 @@ In $app_version$, there are three types of project dependencies (classpath,
 execution, and configuration) and they are independently defined. These
 were combined in a single dependency type in 0.7.x. A declaration like:
 
-    lazy val a = project("a", "A")
-    lazy val b = project("b", "B", a)
+```scala
+lazy val a = project("a", "A")
+lazy val b = project("b", "B", a)
+```
 
 meant that the `B` project had a classpath and execution dependency on
 `A` and `A` had a configuration dependency on `B`. Specifically, in
@@ -609,7 +622,7 @@ meant that the `B` project had a classpath and execution dependency on
     they would default to the value provided in B.
 
 In $app_version$, declare the specific type of dependency you want. Read
-about `multi-project builds </Getting-Started/Multi-Project>` in the
+about [multi-project builds][Multi-Project] in the
 Getting Started Guide for details.
 
 #### Where did class/object X go since 0.7?
