--- a/src/reference/04-Detailed-Topics/00.md
+++ b/src/reference/04-Detailed-Topics/00.md
@@ -2,12 +2,15 @@
 out: Detailed-Topics.html
 ---
 
+  [Getting-Started]: ../tutorial/index.html
+
 Detailed Topics
 ---------------
 
 This part of the documentation has pages documenting particular sbt
 topics in detail. Before reading anything in here, you will need the
-information in the `Getting Started Guide </Getting-Started/Welcome>` as
+information in the
+[Getting Started Guide][Getting-Started] as
 a foundation.
 
 Other resources include the `Examples </Examples/index>` and
