fixed links to Detailed Topics

--- a/src/reference/02-Faq/00.md
+++ b/src/reference/02-Faq/00.md
@@ -10,6 +10,12 @@ out: Faq.html
   [Custom-Settings]: ../tutorial/Custom-Settings.html
   [Multi-Project]: ../tutorial/Multi-Project.html
   [Name-Index]: Name-Index.html
+  [Mapping-Files]: Mapping-Files.html
+  [Testing]: Testing.html
+  [additional-test-configurations]: Testing.html#additional-test-configurations
+  [Library-Management]: Library-Management.html
+  [Migrating-from-sbt-07x]: Migrating-from-sbt-07x.html
+  [Update-Report]: Update-Report.html
 
 Frequently Asked Questions
 --------------------------
@@ -114,7 +120,7 @@ The files included in an artifact are configured by default by a task
 `mappings` that is scoped by the relevant package task. The `mappings`
 task returns a sequence `Seq[(File,String)]` of mappings from the file
 to include to the path within the jar. See
-`/Detailed-Topics/Mapping-Files` for details on creating these mappings.
+[mapping files][Mapping-Files] for details on creating these mappings.
 
 For example, to add generated sources to the packaged source artifact:
 
@@ -217,8 +223,8 @@ to `samples`:
 
 #### How do I add a test configuration?
 
-See the `Additional test configurations` section of
-:doc`/Detailed-Topics/Testing`.
+See the [Additional test configurations][additional-test-configurations] section of
+[Testing][Testing].
 
 #### How can I create a custom run task, in addition to `run`?
 
@@ -256,12 +262,14 @@ Tool dependencies are used to implement a task and are not needed by
 project source code. These dependencies can be declared in their own
 configuration and classpaths. These are the steps:
 
+<!-- TODO -->
+
 1.  Define a new `configuration <ivy-configurations>`.
 2.  Declare the tool
-    `dependencies </Detailed-Topics/Library-Management>` in that
+    [dependencies][Library-Management] in that
     configuration.
 3.  Define a classpath that pulls the dependencies from the
-    `/Detailed-Topics/Update-Report` produced by `update`.
+    [Update Report][Update-Report] produced by `update`.
 4.  Use the classpath to implement the task.
 
 As an example, consider a `proguard` task. This task needs the ProGuard
@@ -455,7 +463,7 @@ the following setting:
 
     checksums in update := Nil
 
-See `/Detailed-Topics/Library-Management` for details.
+See [library management][Library-Management] for details.
 
 #### I've added a plugin, and now my cross-compilations fail!
 
@@ -522,7 +530,7 @@ example:
 #### How do I migrate from 0.7 to 0.10+?
 
 See the
-`migration page </Detailed-Topics/Migrating-from-sbt-0.7.x-to-0.10.x>`
+[migration page][Migrating-from-sbt-07x]
 first and then the following questions.
 
 #### Where has 0.7's `lib_managed` gone?
