fixed links to Extending

--- a/src/reference/02-Faq/00.md
+++ b/src/reference/02-Faq/00.md
@@ -16,6 +16,8 @@ out: Faq.html
   [Library-Management]: Library-Management.html
   [Migrating-from-sbt-07x]: Migrating-from-sbt-07x.html
   [Update-Report]: Update-Report.html
+  [Commands]: Commands.html
+  [Build-State]: Build-State.html
 
 Frequently Asked Questions
 --------------------------
@@ -339,7 +341,7 @@ situation.)
 
 The following code can be used where a `State => State` is required,
 such as in the `onLoad` setting (described below) or in a
-`command </Extending/Commands>`. It adds some files to the "extra"
+[command][Commands]. It adds some files to the "extra"
 component and reloads sbt if they were not already added. Note that
 reloading will drop the user's session state.
 
@@ -361,7 +363,7 @@ reloading will drop the user's session state.
 #### How can I take action when the project is loaded or unloaded?
 
 The single, global setting `onLoad` is of type `State => State` (see
-`/Extending/Build-State`) and is executed once, after all projects are
+[State and Actions][Build-State]) and is executed once, after all projects are
 built and loaded. There is a similar hook `onUnload` for when a project
 is unloaded. Project unloading typically occurs as a result of a
 `reload` command or a `set` command. Because the `onLoad` and `onUnload`
