--- a/src/reference/04-Detailed-Topics/00.md
+++ b/src/reference/04-Detailed-Topics/00.md
@@ -3,6 +3,8 @@ out: Detailed-Topics.html
 ---
 
   [Getting-Started]: ../tutorial/index.html
+  [Howto]: Howto.html
+  [Developers-Guide]: Developers-Guide.html
 
 Detailed Topics
 ---------------
@@ -13,6 +15,8 @@ information in the
 [Getting Started Guide][Getting-Started] as
 a foundation.
 
-Other resources include the `Examples </Examples/index>` and
-`extending sbt </Extending/index>` areas on the wiki, and the
+Other resources include the
+[How to][Howto] and
+[Developer’s Guide][Developers-Guide]
+sections in this reference, and the
 [API Documentation](../../api/index.html)
