fixed links to Howto

--- a/src/reference/02-Faq/00.md
+++ b/src/reference/02-Faq/00.md
@@ -18,6 +18,7 @@ out: Faq.html
   [Update-Report]: Update-Report.html
   [Commands]: Commands.html
   [Build-State]: Build-State.html
+  [Howto-Generating-Files]: Howto-Generating-Files.html
 
 Frequently Asked Questions
 --------------------------
@@ -144,7 +145,7 @@ more appropriate for the generator.
 
 #### How can I generate source code or resources?
 
-See `/Howto/generatefiles`.
+See [Generating Files][Howto-Generating-Files].
 
 #### How can a task avoid redoing work if the input files are unchanged?
 
