fixed links to Community

--- a/src/reference/01-General-Info/06-Changes/00.md
+++ b/src/reference/01-General-Info/06-Changes/00.md
@@ -115,7 +115,7 @@ Changes
 -   Docs: link to page source now at the bottom of the page
 -   Docs: sitemap now automatically generated
 -   Docs: custom
-    `role enables links from a key name in the docs to the val in`sxr/sbt/Keys.scala`
+    role enables links from a key name in the docs to the val in [Keys](../sxr/sbt/Keys.scala)
 -   Docs: restore sxr support and fix links to sxr'd sources. (gh-863)
 
 ### 0.12.4 to 0.13.0
