--- a/src/reference/02-Faq/00.md
+++ b/src/reference/02-Faq/00.md
@@ -19,6 +19,8 @@ out: Faq.html
   [Commands]: Commands.html
   [Build-State]: Build-State.html
   [Howto-Generating-Files]: Howto-Generating-Files.html
+  [Contributing-to-sbt]: Contributing-to-sbt.html
+  [Community-Plugins]: Community-Plugins.html
 
 Frequently Asked Questions
 --------------------------
@@ -47,15 +49,14 @@ something is a bug. See `getting-help`.
 
 #### How can I help?
 
+-   Answer questions on [Stack Overflow](http://stackoverflow.com/tags/sbt).
 -   Fix mistakes that you notice on the wiki.
 -   Make [bug reports](https://github.com/sbt/sbt/issues) that are
     clear and reproducible.
--   Answer questions on [Stack Overflow](http://stackoverflow.com/tags/sbt).
 -   Discuss development on the [sbt-dev mailing list](https://groups.google.com/d/forum/sbt-dev).
 -   Fix issues that affect you. [Fork, fix, and submit a pull request](http://help.github.com/fork-a-repo/).
--   Implement features that are important to you. There is an
-    /Community/Opportunities page for some ideas, but the most useful
-    contributions are usually ones you want yourself.
+-   Implement features that are important to you.
+    See [Contributing to sbt][Contributing-to-sbt] for more details.
 
 ### Usage
 
@@ -671,5 +672,5 @@ Getting Started Guide for details.
 
 #### Where can I find plugins for $app_version$?
 
-See `/Community/Community-Plugins` for a list of currently available
+See [Community Plugins][Community-Plugins] for a list of currently available
 plugins.
