fixed more links

--- a/src/reference/02-Faq/00.md
+++ b/src/reference/02-Faq/00.md
@@ -2,6 +2,7 @@
 out: Faq.html
 ---
 
+  [Getting-Started]: ../tutorial/index.html
   [Basic-Def]: ../tutorial/Basic-Def.html
   [More-About-Settings]: ../tutorial/More-About-Settings.html
   [Running]: ../tutorial/Running.html
@@ -21,6 +22,7 @@ out: Faq.html
   [Howto-Generating-Files]: Howto-Generating-Files.html
   [Contributing-to-sbt]: Contributing-to-sbt.html
   [Community-Plugins]: Community-Plugins.html
+  [ivy-configurations]: Library-Management.html#ivy-configurations
 
 Frequently Asked Questions
 --------------------------
@@ -266,9 +268,7 @@ Tool dependencies are used to implement a task and are not needed by
 project source code. These dependencies can be declared in their own
 configuration and classpaths. These are the steps:
 
-<!-- TODO -->
-
-1.  Define a new `configuration <ivy-configurations>`.
+1.  Define a new [configuration][ivy-configurations].
 2.  Declare the tool
     [dependencies][Library-Management] in that
     configuration.
