fixed more links

--- a/src/reference/01-General-Info/06-Changes/00.md
+++ b/src/reference/01-General-Info/06-Changes/00.md
@@ -2,6 +2,8 @@
 out: Changes.html
 ---
 
+  [ChangeSummary_0.13.0]: ChangeSummary_0.13.0.html
+
 Changes
 -------
 
@@ -87,7 +89,7 @@ Changes
     (gh-806)
 -   Early commands: any command prefixed with `--` gets moved before
     other commands on startup and doesn't force sbt into batch mode.
--   Deprecate internal -, --, and --- commands in favor of `onFailure`,
+-   Deprecate internal `-`, `--`, and `---` commands in favor of `onFailure`,
     `sbtClearOnFailure`, and `resumeFromFailure`.
 -   `makePom` no longer generates `<type>` elements for standard
     classifiers. (gh-728)
@@ -121,5 +123,5 @@ Changes
 ### 0.12.4 to 0.13.0
 
 The changes for 0.13.0 are listed on a separate page. See
-`ChangeSummary_0.13.0`.
+[sbt 0.13.0 changes][ChangeSummary_0.13.0].
 
