--- a/src/reference/02-Faq/00.md
+++ b/src/reference/02-Faq/00.md
@@ -47,7 +47,7 @@ development.
 
 Please use the [issue tracker](https://github.com/sbt/sbt/issues) to
 report confirmed bugs. Do not use it to ask questions or to determine if
-something is a bug. See `getting-help`.
+something is a bug.
 
 #### How can I help?
 
